--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link href="./output.css" rel="stylesheet">
     <title>Tailwind CSS CLI</title>
 </head>
 <body class="bg-zinc-900 text-gray-200">
